--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=PaymentSystem
+#Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/PaymentDB
+spring.datasource.username=postgres
+spring.datasource.password=12345
+
+#JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#Server
+Server.port=8080
+
+#JWT
+
+# LIQUIBASE
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.yaml
