--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ Server.port=8080
 # LIQUIBASE
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.yaml
+
+#Redis
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
